<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.yashpalsinh.lab1.ListItemsActivity">

    <RadioButton
        android:text="@string/radio_button"
        android:id="@+id/radioButton"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>
    <CheckBox
        android:text="@string/check_box"
        android:id="@+id/checkBox"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>
    <Switch
        android:text="@string/switch1"
        android:id="@+id/switch1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />

</GridLayout>
